samples/_failures_safe/1761202615_3bf312_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b09b0916.c: In function ‘main’:
./samples/SAFE/__tmp_b09b0916.c:167:48: error: expected ‘)’ at end of input
  167 |     printf("Compression ratio: %.2f%%\n", ratio
      |           ~                                    ^
      |                                                )
./samples/SAFE/__tmp_b09b0916.c:167:5: error: expected declaration or statement at end of input
  167 |     printf("Compression ratio: %.2f%%\n", ratio
      |     ^~~~~~
